Fix Vercel deployment: add legacy-peer-deps flag

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
+  "installCommand": "npm install --legacy-peer-deps",
   "outputDirectory": "build",
   "devCommand": "npm start",
   "cleanUrls": true,
